<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:id="@+id/bookTitle"
        android:layout_width="361dp"
        android:layout_height="82dp"
        android:inputType="text"
        android:hint="@string/title"
        android:maxLength="50" />

    <EditText
        android:id="@+id/bookAuthor"
        android:layout_width="361dp"
        android:layout_height="60dp"
        android:inputType="text"
        android:hint="@string/author"
        android:maxLength="30" />

    <Spinner
        android:id="@+id/bookGenreSpinner"
        android:layout_width="362dp"
        android:layout_height="55dp"
        android:entries="@array/genre_array" />

    <EditText
        android:id="@+id/bookGenreOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/other_genre"
        android:inputType="text"
        android:maxLength="20"
        android:visibility="gone" />

    <EditText
        android:id="@+id/bookYear"
        android:layout_width="362dp"
        android:layout_height="72dp"
        android:hint="@string/publication_year"
        android:maxLength="4"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/bookRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/read" />

    <Button
        android:id="@+id/deleteBookButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="@string/delete_button"
        android:textColor="#FFFFFF"
        android:visibility="gone" />

</LinearLayout>